# respeak

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
examples/: cosyvoice3_tts_streaming.py  nvidia_audio2face_3d_streaming.py  paraformer_asr_streaming.py  qwen3_llm_streaming.py  silerovad_real_inference.py
src/respeak/: __init__.py  base.py
src/respeak/models/: __init__.py
src/respeak/models/cosyvoice3_tts/: __init__.py  modeling_cosyvoice3_tts.py
src/respeak/models/cosyvoice3_tts/cosyvoice/cli/: cosyvoice.py
src/respeak/models/cosyvoice3_tts/cosyvoice/vllm/: cosyvoice2.py
src/respeak/models/cosyvoice3_tts/matcha/models/components/: flow_matching.py
src/respeak/models/cosyvoice3_tts/matcha/utils/: __init__.py
src/respeak/models/nvidia_audio2face_3d/: __init__.py  a2f_engine.py  audio_io.py  modeling_nvidia_audio2face_3d.py  ue5_blendshape_renderer.py
src/respeak/models/paraformer_asr/: __init__.py  modeling_paraformer_asr.py
src/respeak/models/qwen3_llm/: __init__.py  modeling_qwen3_llm.py
src/respeak/models/silerovad/: __init__.py  modeling_silerovad.py
tests/: test_modeling_common.py
tests/models/cosyvoice3_tts/: test_modeling_cosyvoice3_tts.py
tests/models/nvidia_audio2face_3d/: test_modeling_nvidia_audio2face_3d.py
tests/models/paraformer_asr/: test_modeling_paraformer_asr.py
tests/models/qwen3_llm/: test_modeling_qwen3_llm.py
tests/models/silerovad/: test_modeling_silerovad.py
